--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="logo" href="image/blazer2.png">
+    <link rel="icon" href="image/logo.png">
     <title>Nike Store</title>
 </head>
 
